<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sortAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_author"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/sortTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/sortTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/sortDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortAuthor" />

        <TextView
            android:id="@+id/sortDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_date"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/sortWebsite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortTitle" />

        <TextView
            android:id="@+id/sortWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_website"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/sortTag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortDate" />

        <TextView
            android:id="@+id/sortTag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:onClick="onClickSort"
            android:text="@string/sort_tag"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/sortRead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortWebsite" />

        <CheckBox
            android:id="@+id/sortRead"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/sort_read"
            app:layout_constraintBottom_toTopOf="sortUnread"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortTag" />

        <CheckBox
            android:id="@+id/sortUnread"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:gravity="center"
            android:text="@string/sort_unread"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortRead" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>

